<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#FFFFFF"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:text="@string/name1"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"
		android:layout_margin="4dp"/>

	<Button
		android:id="@+id/button2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/name2"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"
		android:layout_toRightOf="@id/button1"
		android:layout_alignTop="@id/button1"
		android:layout_marginBottom="4dp"/>

	<Button
		android:id="@+id/button3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/name3"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"
		android:layout_toRightOf="@id/button2"
		android:layout_alignTop="@id/button1"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"/>

	<Button
		android:id="@+id/button4"
		android:layout_width="wrap_content"
		android:layout_height="fill_parent"
		android:text="@string/name4"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"
		android:layout_below="@id/button2"
		android:layout_toRightOf="@id/button1"
		android:layout_marginRight="4dp"
		android:layout_alignBottom="@id/button1"/>


	<Button
		android:id="@+id/button5"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_toRightOf="@id/button4"
		android:layout_below="@id/button3"
		android:layout_alignBottom="@id/button1"
		android:layout_alignRight="@id/button3"
		android:layout_marginTop="4dp"
		android:text="@string/name5"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"/>

	<Button
		android:id="@+id/button6"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_toRightOf="@id/button4"
		android:layout_toLeftOf="@id/button3"
		android:layout_above="@id/button5"
		android:layout_below="@id/button2"
		android:text="@string/name6"
		android:textSize="30sp"
		android:textColor="#FFFFFF"
		android:background="@drawable/l1"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/tip"
		android:gravity="bottom|right"
		android:textSize="18sp"
		android:textColor="#FC4F80"
		android:layout_marginBottom="5dp"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/test"
		android:gravity="bottom|left"
		android:textSize="18sp"
		android:textColor="#FFFFFF"
		android:layout_margin="5dp"/>
</RelativeLayout>
